--- a/src/main/resources/templates/made_changes.html
+++ b/src/main/resources/templates/made_changes.html
@@ -16,7 +16,7 @@
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
 <form action="/checkPassword" method="post" th:object="${curUser}" th:class="${darkDesign} ? 'dark adaptform2' : 'adaptform2'" style="text-align: center">
     <span>Изменения внесены</span><br><br>
-    <a class="oper" href="/profile" >КРУТО</a>
+    <a class="oper pkopadapt" href="/profile" >КРУТО</a>
 </form>
 </body>
 </html>
