--- a/src/main/resources/static/css/menu_style.css
+++ b/src/main/resources/static/css/menu_style.css
@@ -40,6 +40,10 @@
         border: 2px solid #3498db;
     }
 
+    .bnyt3{
+        margin-top: 30px;
+    }
+
     .button-secondary {
         color: #fff;
         background-color: #e74c3c;
@@ -62,14 +66,6 @@
         display: block;
         font-size: 16px;
         margin-bottom: 5px;
-    }
-
-    .form-input {
-        width: 80%;
-        padding: 10px;
-        font-size: 16px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
     }
 
     .button2 {
@@ -114,13 +110,9 @@
     }
 
     input[type="text"] {
-        width: 100%;
         padding: 10px;
-        margin-bottom: 16px;
-        box-sizing: border-box;
         border: 1px solid #ccc;
         border-radius: 4px;
-        font-size: 16px;
     }
 
     input[type="submit"] {
@@ -130,12 +122,27 @@
         border: none;
         border-radius: 4px;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 20px;
         transition: background-color 0.3s ease-in-out;
     }
 
     input[type="submit"]:hover {
         background-color: #45a049;
+    }
+
+    .form-input {
+        width: 90%;
+        padding: 10px;
+        font-size: 24px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-bottom: 8px;
+    }
+
+    h2{
+        font-size: 32px;
+        margin-bottom: 5px;
+        margin-top: 0px;
     }
 
     /********************Анимация********************/
@@ -148,6 +155,22 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
