--- a/src/main/resources/templates/edit_password.html
+++ b/src/main/resources/templates/edit_password.html
@@ -15,8 +15,8 @@
 </header>
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
 <form action="/checkPassword" method="post" th:object="${curUser}" th:class="${darkDesign} ? 'dark adaptform2' : 'adaptform2'">
-    <b>ПАРОЛЬ</b> <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
-    <b>НОВЫЙ ПАРОЛЬ</b> <input type="text" id="newPassword" name="newPassword"><br><br>
+    <b>ПАРОЛЬ</b><br> <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
+    <b>НОВЫЙ ПАРОЛЬ</b><br> <input type="text" id="newPassword" name="newPassword"><br><br>
     <span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль меньше 6 символов</span><br>
     <input type="submit" value="СОХРАНИТЬ" class="marginsubmit"/>
 </form>
