--- a/src/main/resources/templates/registry.html
+++ b/src/main/resources/templates/registry.html
@@ -17,7 +17,7 @@
         Почта: <br><input class="form-input" type="email" th:field="*{email}" />
         <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="error-message"></span>
         <br>
-        <input type="submit" class="button2" value="Зарегистрироваться" />
+        <input type="submit" class="button2 bnyt3" value="Зарегистрироваться" />
     </form>
 </div>
 </body>
