add additional validation for user

--- a/src/main/resources/templates/edit_password.html
+++ b/src/main/resources/templates/edit_password.html
@@ -15,9 +15,9 @@
 </header>
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
 <form action="/checkPassword" method="post" th:object="${curUser}" th:class="${darkDesign} ? 'dark adaptform2' : 'adaptform2'">
-    <b>ПАРОЛЬ</b><br> <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
-    <b>НОВЫЙ ПАРОЛЬ</b><br> <input type="text" id="newPassword" name="newPassword"><br><br>
-    <span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль меньше 6 символов</span><br>
+    <b>ПАРОЛЬ</b><br> <input type="text" th:field="*{password}"/><br><div style="text-align: center; margin-bottom: 2%;"><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span></div><br>
+    <b>НОВЫЙ ПАРОЛЬ</b><br> <input type="text" id="newPassword" name="newPassword"><br>
+    <div style="text-align: center; margin-bottom: 2%;"><span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль не входит в диапазон 6-15 символов</span></div><br>
     <input type="submit" value="СОХРАНИТЬ" class="marginsubmit"/>
 </form>
 </body>
