--- a/src/main/resources/templates/forgotPasswordView.html
+++ b/src/main/resources/templates/forgotPasswordView.html
@@ -17,6 +17,7 @@
     </div>
     <form action="/sendEmail" method="post" th:class="${darkDesign} ? 'dark' : ''">
         <span style="font-size: 22px">ПОЧТА</span> <input class="form-input" type="text" id="email" name="email"><br><br>
+        <div style="text-align: center; margin-bottom: 2%;"><span th:if="${errorEmail}" class="error-message">Ошибка: некорректный формат почты</span></div><br>
         <input type="submit" value="Отправить письмо"/><br><br>
     </form>
 </div>
