--- a/src/main/resources/templates/signIN.html
+++ b/src/main/resources/templates/signIN.html
@@ -17,7 +17,8 @@
         <div class="form-group">
             <label class="form-label" for="password">Пароль:</label>
             <input class="form-input" type="password" id="password" name="password" required/>
-        </div><br>
+        </div>
+        <div style="text-align: center; margin-bottom: 2%;"><span th:if="${errorUser}" class="error-message">Неправильный логин или пароль</span></div><br><br>
         <input type="submit" class="button2 adaptive" value="Войти"/>
     </form>
 </div>
